--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 dataset/05.12_dataset filter=lfs diff=lfs merge=lfs -text
 dataset filter=lfs diff=lfs merge=lfs -text
+dataset/** filter=lfs diff=lfs merge=lfs -text
+dataset1/** filter=lfs diff=lfs merge=lfs -text
